# libromfs

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml
generator/: CMakeLists.txt
generator/source/: main.cpp
lib/: CMakeLists.txt
lib/include/nonstd/: span.hpp
lib/include/romfs/: romfs.hpp
lib/source/: romfs.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_compression.cpp  test_framework.hpp  test_main.cpp
tests/resources/: .romfsignore  data.json  hello.txt  included.txt  script.py  tempfile.tmp  test.md
tests/resources/subdir/: nested.txt
